server(controller): added the sign out functionnality
