# server/src/routes/user.routes.ts
@@ -3,6 +3,7 @@ import {
   getAllUsers,
   loginUser,
   getAuthUser,
+  signOut,
 } from "../controller/user.controller.js";
 import { Router } from "express";
 import { verifyToken } from "../middlewares/jwt.verify.js";
@@ -13,5 +14,6 @@ router.get("/", getAllUsers);
 router.post("/register", registerUser);
 router.post("/login", loginUser);
 router.get("/getAuth", verifyToken, getAuthUser);
+router.delete("/signout", verifyToken, signOut)
 
 export default router;
